index.html file is updated

--- a/site/index.html
+++ b/site/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Welcome to Web Technologies</title>
+	<title>Welcome Web Technologies</title>
 </head>
 <body>
-<h1>Welcome to Web Technologies</h1>
-<h2> BS E-Commerce HCC </h2>
+<h1>Welcome Web Technologies</h1>
+<p>Welcome Web Technologies, Welcome Web Technologies</p>
 </body>
 </html>
